--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -37,6 +37,8 @@ div.desc {
     {% endif %}
     {% if site.email %}
     <a href="mailto:{{ site.email }}">Email</a>
+    {% endif %}
+    <a href="https://www.facebook.com/yunho0130">Facebook</a>
   </p>
     <!-- 
     <a href="https://www.linkedin.com/in/yunho0130">Linkedin</a>
