--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
     {{ content }}
   </article>
   
-  {% include comment.html %}
+  {% include disqus_comments.html %}
 </div>
 
 <div id="disqus_thread"></div>
