--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,7 +29,7 @@ div.desc {
   <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="yunho0130"><a class="LI-simple-link" href='https://kr.linkedin.com/in/yunho0130?trk=profile-badge'>Yunho Maeng</a></div>
   -->
 <!-- Profile Image -->
-<img src="https://avatars1.githubusercontent.com/u/42957465?s=400&u=775738aa9beca5fb8416bb539732c19774267ef2&v=4" alt="Smiley face" height="150" width="150">
+<img src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/ef201f46168975.5607c58456490.jpg" alt="Smiley face" height="150" width="150">
     <p>{{ site.profile }}</p>
   <p class="contact">
     {% if site.twitter_username %}
